Fixed minor spelling and grammar errors.

--- a/install/lambdas/email_templates/basic_no_password_policy.html
+++ b/install/lambdas/email_templates/basic_no_password_policy.html
@@ -1,4 +1,4 @@
 <h2>Password Policy Not Set</h2>
 <p>
-    The account doens't have password policy. <a href="https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_passwords_account-policy.html">Please set a password policy.</a> 
+    The account doesn't have a password policy. <a href="https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_passwords_account-policy.html">Please set a password policy.</a> 
 </p>
