--- a/install/lambdas/email_templates/basic_unused_eip.html
+++ b/install/lambdas/email_templates/basic_unused_eip.html
@@ -1,7 +1,7 @@
 <h2>Unused Elastic IPs</h2>
 <p>
     The account has Elastic IP (EIP) addresses not attached to a network interface. <br/>
-    It's recommended to <a href="https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-instance-addressing-eips-releasing.html">realese unused EIPs</a>
+    It's recommended to <a href="https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-instance-addressing-eips-releasing.html">release unused EIPs</a>
 </p>
 <ul>
     ***UNUSED_EIPS***
