refactor email templates

--- a/install/lambdas/email_templates/basic_missing_tags.html
+++ b/install/lambdas/email_templates/basic_missing_tags.html
@@ -1,5 +1,5 @@
 <h2>Missing Tags</h2>
 <p>The checker looks for the tags ***TAGS*** and finds the following resources without these tags</p>
 <ul>
-    ***MISSING_TAGS_LIST***
+    ***ITEMS***
 </ul>
