--- a/install/lambdas/email_templates/basic_s3_public_access.html
+++ b/install/lambdas/email_templates/basic_s3_public_access.html
@@ -1,5 +1,5 @@
 <h2>S3 Buckets With Public Access</h2>
 <p>The checker looks for S3 buckets with public access and found the following</p>
 <ul>
-    ***S3_BUCKETS_LIST***
+    ***ITEMS***
 </ul>
