--- a/install/lambdas/email_templates/basic_unattached_ebs_volume.html
+++ b/install/lambdas/email_templates/basic_unattached_ebs_volume.html
@@ -5,5 +5,5 @@
     If they are not, <a href="https://docs.aws.amazon.com/prescriptive-guidance/latest/optimize-costs-microsoft-workloads/ebs-delete-ebs-volumes.html">consider deleting them</a>
 </p>
 <ul>
-    ***UNATTACHED_EBS_VOLUMES***
+    ***ITEMS***
 </ul>
