--- a/install/lambdas/email_templates/basic_unused_eip.html
+++ b/install/lambdas/email_templates/basic_unused_eip.html
@@ -4,5 +4,5 @@
     It's recommended to <a href="https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-instance-addressing-eips-releasing.html">release unused EIPs</a>
 </p>
 <ul>
-    ***UNUSED_EIPS***
+    ***ITEMS***
 </ul>
