--- a/install/lambdas/email_templates/basic_missing_tags_item.html
+++ b/install/lambdas/email_templates/basic_missing_tags_item.html
@@ -1,3 +1,3 @@
 <li>
-    Resource Type: ***RESOURCE_TYPE***. <a href="***RESOURCE_URL***">***RESOURCE_ID***</a>
+    Resource Type: ***RESOURCE_TYPE***. Resource: ***RESOURCE_ID***
 </li>
