--- a/install/lambdas/email_templates/basic_missing_tags.html
+++ b/install/lambdas/email_templates/basic_missing_tags.html
@@ -1,4 +1,4 @@
-<h2>Missing Tags</h2>
+<h2>***TITLE***</h2>
 <p>The checker looks for the tags ***TAGS*** and finds the following resources without these tags</p>
 <ul>
     ***ITEMS***
