minor fixes after name change to check42

--- a/install/lambdas/email_templates/main.html
+++ b/install/lambdas/email_templates/main.html
@@ -3,8 +3,8 @@
 <head></head>
 
 <body>
-    <h1>AWS Best Practices Checks</h1>
-    <p>This is a summary of the AWS Best Practices Checks findings</p>
+    <h1>Check42</h1>
+    <p>This is a summary of the Chceck42 findings</p>
     ***FINDINGS***
 </body>
 
