add index.js and fix amplify url

--- a/install/frontend/checks/checks.html
+++ b/install/frontend/checks/checks.html
@@ -32,6 +32,7 @@
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Your script -->
+<script src="../index.js"></script>
 <script src="checks.js"></script>
 </body>
 </html>
