--- a/install/frontend/login/login.html
+++ b/install/frontend/login/login.html
@@ -32,6 +32,7 @@
 
 <!-- Add jQuery before your login.js -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="../index.js"></script>
 <script src="login.js"></script>
 </body>
 </html>
