--- a/install/frontend/settings/settings.html
+++ b/install/frontend/settings/settings.html
@@ -42,6 +42,7 @@
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Your script -->
+<script src="../index.js"></script>
 <script src="settings.js"></script>
 </body>
 </html>
