--- a/install/frontend/checks/checks.html
+++ b/install/frontend/checks/checks.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check List</title>
     <link rel="stylesheet" href="checks.css">
+    <link rel="stylesheet" href="/navbar/navbar.css">
 </head>
 <body>
+<nav class="navbar">
+    <ul>
+        <li><a href="../login/login.html">Login</a></li>
+        <li><a href="../settings/settings.html">Settings</a></li>
+        <li><a href="../checks/checks.html">Checks</a></li>
+    </ul>
+</nav>
 <div id="success-banner" class="banner success-banner" style="display: none;">
     Successfully saved
 </div>
@@ -14,16 +22,7 @@
     <div class="page-header">
         <h1 class="title">Check 42</h1>
     </div>
-    <div class="frequency-container">
-        <div class="frequency-input-group">
-            <label for="frequency-select">How often do you want to run the audit?</label>
-            <select id="frequency-select" class="frequency-dropdown">
-                <option value="daily">Daily</option>
-                <option value="weekly">Weekly</option>
-            </select>
-        </div>
-        <button id="save-frequency" class="save-button">Save</button>
-    </div>
+
     <div class="checklist" id="checklist-container">
         <div id="loading">Loading...</div>
     </div>
