--- a/install/frontend/checks/checks.html
+++ b/install/frontend/checks/checks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check List</title>
     <link rel="stylesheet" href="checks.css">
-    <link rel="stylesheet" href="/navbar/navbar.css">
+    <link rel="stylesheet" href="../navbar/navbar.css">
 </head>
 <body>
 <nav class="navbar">
