--- a/install/frontend/login/login.html
+++ b/install/frontend/login/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Check42 Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
