--- a/install/frontend/checks/checks.html
+++ b/install/frontend/checks/checks.html
@@ -20,9 +20,12 @@
 </div>
 <div class="container">
     <div class="page-header">
-        <h1 class="title">Check 42</h1>
+        <h1 class="title">Checks</h1>
     </div>
-
+    <div class="run">
+        <button id="run-now" class="run-button">Run Now</button>
+        <button id="processing-button" class="processing-button" style="display: none;">Processing...</button>
+    </div>
     <div class="checklist" id="checklist-container">
         <div id="loading">Loading...</div>
     </div>
